--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@hookform/resolvers": "^2.9.10",
+    "@mui/material": "^5.11.0",
     "firebase": "^9.15.0",
     "phosphor-icons": "^1.4.2",
     "phosphor-react": "^1.4.1",
